--- a/Style.css
+++ b/Style.css
@@ -76,10 +76,6 @@ body {
     font-size: 1.5vw;
 }
 
-.educontainer .eduright p{
-    line-height: 0.5vw;
-}
-
 .workcontainer{
     display: flex;
     margin-left: 5vw;
@@ -95,9 +91,52 @@ body {
 }
 
 .workcontainer .workright{
-    width: 80%;
+    margin-left: 3.5vw;
+   width: 55%;
+
+}
+
+.certcontainer{
+    margin-left: 5vw;
+    display: flex;
+}
+
+.certcontainer p{
+    font-size: 1.5vw;
+}
+
+.extracontainer{
+    margin-left: 5vw;
+    display: flex;
+}
+
+.extracontainer p{
+    font-size: 1.5vw;
+}
+
+.additional{
     margin-left: 5vw;
 }
 
+.additional p{
+    font-size: 1.5vw;
+    text-align: justify;
+}
 
+.refcontainer{
+    margin-left: 5vw;
+    display: flex;
+}
 
+.refcontainer p{
+    font-size: 1.5vw;
+}
+
+.refcontainer .refright{
+    margin-left: 10vw;
+    width: 50%;
+}
+
+.refcontainer .refleft{
+    width: 50%;
+}
