--- a/Style.css
+++ b/Style.css
@@ -155,7 +155,23 @@ body {
     width: 30%;
 }
 
-.footer{
+.original{
+    margin-left: 3.0vw;
+}
+
+.original p{
+    font-size: 1.5vw;
+}
+.original a{
+    text-decoration: none;
+}
+.footerdiv{
+    text-align: center;
     background-color: black;
     color: white;
+    height: 6vw;
+    font-size: 1.5vw;
+    padding-top: 1.1vw;
+    padding-bottom: 2.3vw;
+    margin-top: 1.5vw;
 }
