--- a/Style.css
+++ b/Style.css
@@ -32,6 +32,7 @@ body {
 .containerleft img {
     width: 85%;
     height: 22vw;
+    border-radius: 20%;
 }
 
 .containerleft .tellink2{
@@ -53,6 +54,19 @@ body {
     color: white;
     padding: 5vw;
     border-radius: 5vw;
+}
+.containerright .innerdiv .h1kirub{
+    font-size: 4vw;
+}
+.containerright .innerdiv .h2fresh{
+    font-size: 2.5vw;
+}
+
+.containerright .divcontent .bio{
+    margin-left: 5vw; 
+    line-height: 1.6vw; 
+    font-size: 1.45vw; 
+    text-align: justify;
 }
 
 .containerright h3{
@@ -174,4 +188,39 @@ body {
     padding-top: 1.1vw;
     padding-bottom: 2.3vw;
     margin-top: 1.5vw;
+}
+
+@media (max-width: 950px) {
+    
+    .header{
+        font-size: 11.8vw;
+    }
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+    .containerleft{
+      margin: 0 auto;
+      font-size: 5.8vw;
+      width: 85%;
+      text-align: center;
+    
+    }
+    .containerleft .h2personal{
+        text-align: center;
+    }
+    .containerleft img{
+        width: 80%;
+        height: 60vw;
+    }
+    .containerright{
+        margin: 0 auto;
+        width: 90%;
+        font-size: 6vw;
+    }
+
+    .footerdiv{
+        height: 30vw;
+        font-size: 5.8vw;
+    }
 }
