--- a/Style.css
+++ b/Style.css
@@ -30,9 +30,10 @@ body {
 
 
 .containerleft img {
-    width: 85%;
-    height: 22vw;
+    width: 100%;
+    height: 30vw;
     border-radius: 20%;
+    justify-content: center;
 }
 
 .containerleft .tellink2{
@@ -115,6 +116,9 @@ body {
     display: flex;
 }
 
+.italic{
+    font-size: 1.3vw;
+}
 .certcontainer p{
     font-size: 1.5vw;
 }
@@ -198,11 +202,12 @@ body {
     .container{
         display: flex;
         flex-direction: column;
+
     }
     .containerleft{
       margin: 0 auto;
       font-size: 5.8vw;
-      width: 85%;
+      width: 90%;
       text-align: center;
     
     }
@@ -210,13 +215,13 @@ body {
         text-align: center;
     }
     .containerleft img{
-        width: 80%;
+        width: 90%;
         height: 60vw;
+        margin: 0 auto;
     }
-    .containerright{
+    .container .containerright{
         margin: 0 auto;
         width: 90%;
-        font-size: 6vw;
     }
 
     .footerdiv{
