--- a/Style.css
+++ b/Style.css
@@ -263,7 +263,7 @@ body {
     text-decoration: none;
 }
 
-.containerright .refcontainer .refright .dani .tel{
+.containerright .refcontainer .refright .dani a,.tel{
     text-decoration: none;
 }
 .containerright .refcontainer .refright .dani span{
