--- a/Style.css
+++ b/Style.css
@@ -118,9 +118,11 @@ body {
     margin-left: 5vw;
     width: 61.75%;
 }
+
 .workcontainer .workright .IT {
     text-align: justify;
 }
+
 .certcontainer {
     margin-left: 5vw;
     display: flex;
@@ -233,6 +235,7 @@ body {
 .refcontainer .refleft {
     width: 30%;
 }
+
 .containerright .refcontainer .refright .ermi1 {
     text-decoration: none;
 }
@@ -241,10 +244,12 @@ body {
     margin-left: 4.3vw;
     text-decoration: none;
 }
-.containerright .refcontainer .refright .ermi3{
-    margin-left: 1.3vw; 
+
+.containerright .refcontainer .refright .ermi3 {
+    margin-left: 1.3vw;
     text-decoration: none;
 }
+
 .containerright .refcontainer .refright .yekoye {
     margin-top: 0vw;
 }
@@ -263,10 +268,12 @@ body {
     text-decoration: none;
 }
 
-.containerright .refcontainer .refright .dani a,.tel{
+.containerright .refcontainer .refright .dani a,
+.tel {
     text-decoration: none;
 }
-.containerright .refcontainer .refright .dani span{
+
+.containerright .refcontainer .refright .dani span {
     margin-left: 1.5vw;
 }
 
@@ -370,9 +377,11 @@ body {
         margin-top: 1vw;
         font-size: 4.8vw;
     }
-    .containerright .educontainer .eduright .july2024{
-        margin-top: 0.5vw;  
+
+    .containerright .educontainer .eduright .july2024 {
+        margin-top: 0.5vw;
     }
+
     .certcontainer .certleft .july2024 {
         margin-top: 3.0vw;
     }
@@ -443,13 +452,15 @@ body {
     .containerright .certcontainer .certright .coding2 {
         margin-top: 8vw;
     }
-    .containerright .certcontainer .certright .coding3
-    {
+
+    .containerright .certcontainer .certright .coding3 {
         margin-top: 8vw;
     }
-    .containerright .certcontainer .certright .space{
+
+    .containerright .certcontainer .certright .space {
         margin-top: 7.5vw;
     }
+
     .containerright .extracontainer .extraright {
         margin-right: 5vw;
         margin-left: 6vw;
@@ -500,10 +511,12 @@ body {
         margin-left: 0vw;
         text-decoration: none;
     }
-    .containerright .refcontainer .refright .ermi3{
-        margin-left: 0vw; 
+
+    .containerright .refcontainer .refright .ermi3 {
+        margin-left: 0vw;
         text-decoration: none;
     }
+
     .containerright .refcontainer .refright .yekoye {
         margin-top: 21vw;
     }
@@ -531,9 +544,10 @@ body {
         text-decoration: none;
     }
 
-    .containerright .refcontainer .refright .dani .tel{
+    .containerright .refcontainer .refright .dani .tel {
         margin-left: -1vw;
     }
+
     .containerright .refcontainer .refright {
         margin-left: 10vw;
     }
